# substrata

./: .gitignore  CMakeLists.txt  Makefile  boot_sect.asm
boot/: boot_sect.asm  kernel_entry.asm  protected_print.asm
cpu/: idt.c  interrupt.asm  isr.c  isr.h  timer.c  timer.h  types.h
drivers/: keyboard.c  keyboard.h  ports.c  ports.cpp  ports.h  screen.c  screen.h
kernel/: kernel.c  kernel.h  util.c
libc/: mem.c  mem.h  string.c  string.h
sandbox/: disk.asm  disk_test.asm  print.asm  protected_print.asm
scripts/: disk.asm  disk_test.asm  gdt.asm  print_tests.asm
